--- a/marcch.css
+++ b/marcch.css
@@ -1,193 +1,195 @@
-*{
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-body{
-  background-color: #FAE3E6
+body {
+  background-color: #fae3e6;
 }
 
 body {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .wrapper form > div {
-    margin-left: 3em;
+  margin-left: 3em;
 }
-.wrapper h2{
-      width: 10em;
-      margin-right: 10em
-    -ms-flex-item-align: start;
-        justify-content: flex-start;
-    margin: 2em 0.5em 0.3em 1em;
-   color: #fff;
-    font-size: 2em;
-    font-weight: normal;
+.wrapper h2 {
+  width: 10em;
+  margin-right: 10em;
+  -ms-flex-item-align: start;
+  justify-content: flex-start;
+  margin: 2em 0.5em 0.3em 1em;
+  color: #fff;
+  font-size: 2em;
+  font-weight: normal;
 }
-.wrapper h2::first-letter{
-    color: #FAE3E6;
-    font-size: 1.5em;
-    font-weight: bold;
+.wrapper h2::first-letter {
+  color: #fae3e6;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 form > h4 {
-    text-transform: uppercase;
-    color: #4c5462ff;
-    letter-spacing: 2px;
-    font-size: 1.3em;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: normal;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+  text-transform: uppercase;
+  color: #4c5462ff;
+  letter-spacing: 2px;
+  font-size: 1.3em;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: normal;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
-form input{
+form input {
   width: 80%;
   /*border: none;*/
   padding: 5px;
-  background-color:white;
+  background-color: white;
 }
 .dob {
   width: 23.7%;
 }
 .radio {
   width: 20px;
-  } 
+}
 
-form input[type=text],
-form input[type=email], 
-form input[type=tel]{
-    background-color: transparent;
-    border:0px;
-    border-bottom: 1px solid #4c5462ff;
-    font-size: 1.1em;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #000;
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"] {
+  background-color: transparent;
+  border: 0px;
+  border-bottom: 1px solid #4c5462ff;
+  font-size: 1.1em;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000;
 }
 
 /*.wrapper form > input{
 }*/
-.wrapper form{
+.wrapper form {
   justify-content: center;
   padding: 1em;
-   background-color: #f3f3f3ff;
-  box-shadow: -150px -100px #52000A;
+  background-color: #f3f3f3ff;
+  box-shadow: -150px -100px #52000a;
 }
 
-.wrapper form > div { 
-    margin-left: 3em;
-    width: 500px;
-    margin: 25px auto;
-    background-color: white;
+.wrapper form > div {
+  margin-left: 3em;
+  width: 500px;
+  margin: 25px auto;
+  background-color: white;
 }
-form input[type=text],
-form input[type=email], 
-form input[type=tel]{
-    background-color: transparent;
-    border:0px;
-    border-bottom: 1px solid #4c5462ff;
-    font-size: 1.1em;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #000;
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"] {
+  background-color: transparent;
+  border: 0px;
+  border-bottom: 1px solid #4c5462ff;
+  font-size: 1.1em;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000;
 }
-form input[type=text],
-form input[type=email], 
-form input[type=tel]:focus{
-    outline-style: none;
+form input[type="text"],
+form input[type="email"],
+form input[type="tel"]:focus {
+  outline-style: none;
 }
-a:link, a:visited {
+a:link,
+a:visited {
   color: white;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  border: 0px;
-    padding: 1em 3em;
-    margin-left: 10em;
-    color: white;
-    text-transform: capitalize;
-    font-size: 1em;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    background-color: #52000A;
-    cursor: pointer;
-    -webkit-transition: background-color 0.5s ease;
-        -o-transition: background-color 0.5s ease;
-        transition: background-color 0.5s ease;
-    -webkit-box-shadow: 5px 5px 20px -2px #99787C;
-            box-shadow: 5px 5px 20px -2px #99787C;
+  padding: 1em 3em;
+  margin-left: 10em;
+  color: white;
+  text-transform: capitalize;
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: #52000a;
+  cursor: pointer;
+  -webkit-transition: background-color 0.5s ease;
+  -o-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
+  -webkit-box-shadow: 5px 5px 20px -2px #99787c;
+  box-shadow: 5px 5px 20px -2px #99787c;
 }
-button{
-     color: white;
+button {
+  color: white;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  border: 0px;
-    padding: 1em 3em;
-    margin-left: 10em;
-    color: white;
-    text-transform: capitalize;
-    font-size: 1em;
-    font-family:Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    background-color: #52000A;
-    cursor: pointer;
-    -webkit-transition: background-color 0.5s ease;
-        -o-transition: background-color 0.5s ease;
-        transition: background-color 0.5s ease;
-    -webkit-box-shadow: 5px 5px 20px -2px #99787C;
-            box-shadow: 5px 5px 20px -2px #99787C;
+  padding: 1em 3em;
+  margin-left: 10em;
+  color: white;
+  text-transform: capitalize;
+  font-size: 1em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: #52000a;
+  cursor: pointer;
+  -webkit-transition: background-color 0.5s ease;
+  -o-transition: background-color 0.5s ease;
+  transition: background-color 0.5s ease;
+  -webkit-box-shadow: 5px 5px 20px -2px #99787c;
+  box-shadow: 5px 5px 20px -2px #99787c;
 }
-   
+.next,
+.reset {
+  border: 2px solid #fae3e6;
+}
 
 table {
   border-collapse: collapse;
   width: 100%;
 }
 
-td, th {
+td,
+th {
   border: 1px solid #999;
   padding: 0.5rem;
   text-align: left;
 }
 
-@media only screen and (max-width: 600px){
-    .wrapper h2 {
-        font-size: 1.3em;
-    }
-    form > /*:nth-child(7)*/ .input-box, input, form > div:nth-child(6) .input-box input, form > div:nth-child(3) .input-box input, form > div:nth-child(2) .input-box input{
-        width: 8em;
-    }
+@media only screen and (max-width: 600px) {
+  .wrapper h2 {
+    font-size: 1.3em;
+  }
+  form > /*:nth-child(7)*/ .input-box, input, form > div:nth-child(6) .input-box input, form > div:nth-child(3) .input-box input, form > div:nth-child(2) .input-box input {
+    width: 8em;
+  }
 
-    form > /*div:nth-child(4) */.input-box input[type=text]{
-        width: 3em;
-    }
+  form > /*div:nth-child(4) */.input-box input[type=text] {
+    width: 3em;
+  }
 
-    form > /*div:nth-child(5)*/ label{
-        font-size: 0.7em;
-    }
+  form > /*div:nth-child(5)*/ label {
+    font-size: 0.7em;
+  }
 
-    form > /*div:nth-child(7)*/ select{
-        width: 4em;
-    } 
+  form > /*div:nth-child(7)*/ select {
+    width: 4em;
+  }
 
-    .wrapper form{
-        right: -5em;
-    }
+  .wrapper form {
+    right: -5em;
+  }
 
-   /* form > div:nth-child(8){
+  /* form > div:nth-child(8){
         right: 1em;
     }*/
 }
-    }
